languages/io-automaton-fe/src/test/resources/valid/namecompletion/CompleteBasicJava.ioautomaton
package valid.namecompletion;


automaton CompleteBasicJava {
  input int distance;
  output boolean command;
  variable char flag;
  
  state Okay, Stopped;
  initial Okay / {false, 'f'};
  
  Okay -> Stopped {1} / {true, 't'};
  Okay -> Okay {17+5} / {true || false || true, 'h'};
}