languages/io-automaton-fe/src/test/resources/invalid/StimulusAndEventDontFit.ioautomaton
package invalid;

automaton StimulusAndEventDontFit{
    input int i;
    input boolean s;
    
    output int a;
    
    state A,B;
    
    initial A;
    
    A->B {i == false, s == 255};
}